tests/ui/issues/issue-21974.stderr
error[E0283]: type annotations needed: cannot satisfy `&'a T: Foo`
  --> $DIR/issue-21974.rs:11:19
   |
LL |     where &'a T : Foo,
   |                   ^^^
   |
note: multiple `impl`s or `where` clauses satisfying `&'a T: Foo` found
  --> $DIR/issue-21974.rs:11:19
   |
LL |     where &'a T : Foo,
   |                   ^^^
LL |           &'b T : Foo
   |                   ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
